Removes NodeExtender and related classes since we don't compile Java code any more, plus a little automatic code cleanup.